# simbaID-backend

./: .gitignore  README.md
backend/: =2.3  api_demo.py  environment.yml  pyproject.toml  pytest.ini  run.py  setup.py
backend/simbaid/: render.yaml
backend/simbaid/api/v1/: routes.py
backend/simbaid/core/: app.py  config.py
backend/simbaid/models/: schemas.py
backend/simbaid/services/: ai_service.py
backend/simbaid/utils/: logger.py
backend/tests/: conftest.py  test_ai_service.py  test_health.py  test_logger.py  test_package.py  test_routes.py
contracts/: hardhat.config.js  package.json
contracts/contracts/: SimbaID.sol
contracts/test/: simbaid.test.js
docs/: SimbaIDPRD.md
frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
frontend/.next-dev/: app-build-manifest.json  trace
frontend/.next-dev/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/credentials/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/enroll/: page.tsx
frontend/app/loans/: page.tsx
frontend/app/sync/: page.tsx
frontend/app/wallet/: page.tsx
frontend/components/credentials/: credential-filters.tsx  credential-qr-share.tsx  credential-request-dialog.tsx  zk-proof-settings.tsx
frontend/components/dashboard/: sidebar.tsx
frontend/components/layout/: header.tsx
frontend/components/ui/: button.tsx
frontend/hooks/: use-offline-storage.ts  use-offline-sync.ts  use-voice-recording.ts
(+137 files in other folders)
