[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simbaid"
version = "0.1.0"
description = "SimbaID Backend: Voice-Biometric DID with FastAPI"
authors = [{ name = "SimbaID Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "groq>=0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "requests>=2.32",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simbaid*"]

[tool.coverage.run]
branch = true
source = ["simbaid"]
